force-app/main/default/objects/CLQ_Facility_Schedule__c/CLQ_Facility_Schedule__c.object-meta.xml
<CustomObject>
    <label>Facility Schedule</label>
    <nameField>
        <label>Facility Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>