force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_Funding_Source_Picklist__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Funding_Source_Picklist__c</fullName>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tuition</fullName>
            </value>
            <value>
                <fullName>Locally Funded</fullName>
            </value>
            <value>
                <fullName>Preschool Special Education</fullName>
            </value>
            <value>
                <fullName>Board of Developmental Disabilities</fullName>
            </value>
            <value>
                <fullName>Early Childhood Education Grant</fullName>
            </value>
            <value>
                <fullName>Head Start</fullName>
            </value>
            <value>
                <fullName>Publicly Funded Childcare</fullName>
            </value>
            <value>
                <fullName>21st Century Grant</fullName>
            </value>
            <value>
                <fullName>ELI</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>School Age Child Care</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>