force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_HOO_Time_1_End__c.field-meta.xml
<CustomField>
    <fullName>CLQ_HOO_Time_1_End__c</fullName>
    <label>End Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CLQ_Time_Intervals</valueSetName>
    </valueSet>
</CustomField>