force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_HOO_Time_1_Start__c.field-meta.xml
<CustomField>
    <fullName>CLQ_HOO_Time_1_Start__c</fullName>
    <description>User can set 2 ranges for start/end time for each schedule.</description>
    <inlineHelpText>Hours of Operation start time for range 1.</inlineHelpText>
    <label>Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CLQ_Time_Intervals</valueSetName>
    </valueSet>
</CustomField>