force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>CLQ_Inspection__c</referenceTo>
    <relationshipLabel>Facility Schedules</relationshipLabel>
    <relationshipName>Facility_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>