force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_Other_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_Funding_Source__c</fullName>
    <description>Required if Other is selected as the Funding Source</description>
    <label>Other Funding Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>