force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_Prior_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prior_Funding_Source__c</fullName>
    <label>Prior Funding Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>