force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_Prior_Months_Of_Operation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prior_Months_Of_Operation__c</fullName>
    <label>Prior Months Of Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>