force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_Prior_Program_Schedule_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prior_Program_Schedule_Name__c</fullName>
    <label>Prior Program Schedule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>