force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_Prior_Time_1_End__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prior_Time_1_End__c</fullName>
    <label>Prior Time 1 End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>