force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_Prior_Time_2_Start__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Prior_Time_2_Start__c</fullName>
    <label>Prior Time 2 Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>