force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_Program_Schedule_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Schedule_Name__c</fullName>
    <label>Program Schedule Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>