force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_Program_Transaction__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Transaction</label>
    <referenceTo>CLQ_Program_Transaction__c</referenceTo>
    <relationshipLabel>Facility Schedules</relationshipLabel>
    <relationshipName>Facility_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>