force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/CLQ_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>