force-app/main/default/objects/CLQ_Facility_Schedule__c/fields/Months_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Months_of_Operation__c</fullName>
    <inlineHelpText>Pick one or more months; if selected &quot;Year Round&quot; or &quot;Summer Only&quot;, no other months can be selected.</inlineHelpText>
    <label>Months of Operation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Year Round</fullName>
            </value>
            <value>
                <fullName>Summer Only</fullName>
            </value>
            <value>
                <fullName>School Year</fullName>
            </value>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>