force-app/main/default/objects/CLQ_Facility_Schedule__c/listViews/Community_CLQ_Facility_Schedule.listView-meta.xml
<ListView>
    <fullName>Community_CLQ_Facility_Schedule</fullName>
    <filterScope>Queue</filterScope>
    <label>Community</label>
    <queue>Community</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>